...
        return BlocBuilder<ThemeBloc, ThemeState>(
          builder: (context, state) {
            ThemeData themeData = getThemeData(context, state.theme);
            return MaterialApp(
              themeMode: Platform.isIOS ? ThemeMode.light : null,
              title: 'AnyUpp',
              key: const Key('anyupp-main-app'),

              /// Catcher init STEP 3. Add navigator key from Catcher. It will be used to navigate user to report page or to show dialog.
              navigatorKey: Catcher.navigatorKey,
              theme: themeData,
              builder: (context, child) {
                return MediaQuery(
...
