...
  Widget build(BuildContext context) {
    return FutureBuilder<User?>(
        future: getIt<AuthRepository>().getAuthenticatedUserProfile(),
        builder: (BuildContext context, AsyncSnapshot<User?> userSnapshot) {
          if (userSnapshot.hasData) {
            return Scaffold(
                key: const Key('unitselect-screen'),
                backgroundColor: Colors.white,
                body: Container(
                  padding: const EdgeInsets.only(top: kToolbarHeight),
                  child: Column(
                    crossAxisAlignment: CrossAxisAlignment.center,
                    children: <Widget>[
...
