...
                              border: Border.all(
                                width: 1.5,
                                color: const Color(0xffe7e5d0),
                              ),
                            ),
                            child: TextButton(
                                key: const Key('login-btn-anonymous'),
                                style: TextButton.styleFrom(
                                  backgroundColor: Colors.transparent,
                                  padding: EdgeInsets.all(8.0),
                                ),
                                //: Colors.blueAccent,
                                onPressed: () => getIt<LoginBloc>().add(
...
